--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -9,7 +9,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((10, 1591247786, '0o3nKZSKB4AJMcdO', 'science', 'algorithm', '0x0000000000000000000000000000000000000000', '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9', 0), (10, 1591247968, 'AfQp9c2UkskMjHZG', 'science', 'algorithm', '0x0000000000000000000000000000000000000000', '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9', 0), (10, 1591247685, 'GODaK5wuSE2QdLZ7', 'science', 'algorithm', '0x78658C9AaD8523BB283029C43135CF87339ADC21', '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9', 1), (100, 1591247247, 'i7IiqQh55XY4zvjB', 'science', 'AI', '0x0000000000000000000000000000000000000000', '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9', 0), (10, 1591247830, 'rDf2yVZh9RzWnWw8', 'science', 'algorithm', '0x0000000000000000000000000000000000000000', '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9', 0), (89, 1591333314, 'UWwwDLeVAViwifTG', 'Art', 'monariza', '0x0000000000000000000000000000000000000000', '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9', 0), (10, 1591247739, 'xmFYtVfgXDuuB8Sp', 'science', 'algorithm', '0x0000000000000000000000000000000000000000', '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9', 0))\n"
+      "((5,\n",
+      "  datetime.datetime(2020, 6, 26, 12, 59, 58),\n",
+      "  'dD4eckdGhwdTClsU',\n",
+      "  'Blockchain',\n",
+      "  'What is AI',\n",
+      "  '0x78658C9AaD8523BB283029C43135CF87339ADC21',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  1),\n",
+      " (5,\n",
+      "  datetime.datetime(2020, 6, 26, 13, 10, 25),\n",
+      "  'Evap96NltJXpar88',\n",
+      "  'Blockchain',\n",
+      "  'What is AI',\n",
+      "  '0x0000000000000000000000000000000000000000',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  0),\n",
+      " (5,\n",
+      "  datetime.datetime(2020, 6, 26, 13, 11, 41),\n",
+      "  'GtczePj4Jyf4jUqa',\n",
+      "  'Weather',\n",
+      "  'Good weather',\n",
+      "  '0x78658C9AaD8523BB283029C43135CF87339ADC21',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  1),\n",
+      " (10,\n",
+      "  datetime.datetime(2020, 6, 26, 13, 6, 7),\n",
+      "  'Ilm4Vj0q0ueXZVFf',\n",
+      "  'Weather',\n",
+      "  'Winter is Comming',\n",
+      "  '0x0000000000000000000000000000000000000000',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  0),\n",
+      " (10,\n",
+      "  datetime.datetime(2020, 6, 26, 13, 12, 3),\n",
+      "  'izQEr14kCwaDDrre',\n",
+      "  'Health',\n",
+      "  'How to live healthy',\n",
+      "  '0x0000000000000000000000000000000000000000',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  0),\n",
+      " (10,\n",
+      "  datetime.datetime(2020, 6, 26, 13, 3, 1),\n",
+      "  'mfUtkY5tnNvA67pR',\n",
+      "  'Health',\n",
+      "  'How to be healthy',\n",
+      "  '0x0000000000000000000000000000000000000000',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  0),\n",
+      " (10,\n",
+      "  datetime.datetime(2020, 6, 26, 13, 5, 37),\n",
+      "  'PrOR80tvPwLttcPJ',\n",
+      "  'Blockchain',\n",
+      "  'What is ML',\n",
+      "  '0x0000000000000000000000000000000000000000',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  0),\n",
+      " (10,\n",
+      "  datetime.datetime(2020, 6, 26, 13, 7, 2),\n",
+      "  'Vzw45LRzPxP8hHrT',\n",
+      "  'Weather',\n",
+      "  'Good Weather',\n",
+      "  '0x0000000000000000000000000000000000000000',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  0),\n",
+      " (5,\n",
+      "  datetime.datetime(2020, 6, 26, 12, 53, 7),\n",
+      "  'wwCeyvLzrqfR5Wmv',\n",
+      "  'Blockchain',\n",
+      "  'weather',\n",
+      "  '0x78658C9AaD8523BB283029C43135CF87339ADC21',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  1),\n",
+      " (5,\n",
+      "  datetime.datetime(2020, 6, 26, 12, 54, 44),\n",
+      "  'xwVEptG70gtv2jDY',\n",
+      "  'Blockchain',\n",
+      "  'weather',\n",
+      "  '0x78658C9AaD8523BB283029C43135CF87339ADC21',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  1),\n",
+      " (10,\n",
+      "  datetime.datetime(2020, 6, 26, 13, 5, 50),\n",
+      "  'yCU7Q7zCY9n2Wl0Z',\n",
+      "  'Blockchain',\n",
+      "  'What is AI',\n",
+      "  '0x78658C9AaD8523BB283029C43135CF87339ADC21',\n",
+      "  '0x7161a4eCE5dD841756ee38cBEa7da055F29302c9',\n",
+      "  1))\n"
      ]
     }
    ],
